--- a/css/all.css
+++ b/css/all.css
@@ -70,7 +70,13 @@ section {
   border-radius: 50%;
 }
 
-
+@media screen and (max-width:720px) {
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+}
 
 
 
